--- a/WMS/Views/Theme/Default/TenantDataImport/Index.cshtml
+++ b/WMS/Views/Theme/Default/TenantDataImport/Index.cshtml
@@ -54,6 +54,8 @@
         <ul>
             <li><a href="#AI">Accounts</a></li>
             <li><a href="#PI">Products</a></li>
+            <li><a href="#PAI">Products Attributes</a></li>
+            <li><a href="#PCAI">Products/Categories Associations</a></li>
         </ul>
         <div id="AI" class="col-md-12 pull-left">
             @Html.Hidden("ImportType", "Accounts")
@@ -93,6 +95,30 @@
                     Inventory (values should be like 3.0), Base Unit of Measure (values should be like 4.0),
                     Buy Price (values should be like 5.0), Sell Price, Preferred Vendor No, Barcode, Outer Barcode, Serialised
 
+                </span>
+                <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
+            </div>
+        </div>
+
+        <div id="PAI" class="col-md-12 pull-left">
+            <div class='panel-product-uploads'>
+                <h3>Products Attributes Import</h3>
+                <span class="clearfix">The file should be of <i style="color:red">*</i>.csv format. The file should not exceed the maximum size of 1GB. </span>
+                <span class="clearfix" , style="text-align:justify">
+                    This should have the columns in the order of Product SkuCode<i style="color:red">*</i>, Attribute<i style="color:red">*</i>, Attribute Value<i style="color:red">*</i>
+                </span>
+                <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
+            </div>
+        </div>
+
+        <div id="PCAI" class="col-md-12 pull-left">
+
+            <div class='panel-product-uploads'>
+                <h3>Product/Category Association Imports by Website</h3>
+                <span class="clearfix">The file should be of <i style="color:red">*</i>.csv format. The file should not exceed the maximum size of 1GB. The filename should be in the name of the website</span>
+                <span class="clearfix">For example, all accociations belonging to specific website products and categories, should be in a csv file named <b>WebsiteName.csv</b></span>
+                <span class="clearfix" , style="text-align:justify">
+                    This should have the columns in the order of ParentHeading<i style="color:red">*</i>, ChildHeading, SubChildHeading, SkuCode<i style="color:red">*</i>
                 </span>
                 <span class="clearfix"><i style="color:red">*</i> These are the mandatory fields </span>
             </div>
