--- a/WMS/Views/Theme/Default/Shared/PlaceholdersHtmlEditorPartial.cshtml
+++ b/WMS/Views/Theme/Default/Shared/PlaceholdersHtmlEditorPartial.cshtml
@@ -15,9 +15,10 @@
         settings.CallbackRouteValues = new { Controller = "DevexHelper", Action = Model.CallbackAction };
         settings.SettingsDialogs.InsertImageDialog.SettingsImageUpload.UploadCallbackRouteValues = new { Controller = "DevexHelper", Action = "UploadProcessingImageUpload" };
         settings.Settings.AllowInsertDirectImageUrls = false;
-
         settings.Placeholders.AddRange(LayoutHelpers.MailMergeVariablesList.Select(m => new HtmlEditorPlaceholderItem(m.Text)));
-
+        settings.SettingsHtmlEditing.AllowHTML5MediaElements = true;
+        settings.SettingsHtmlEditing.AllowIFrames = true;
+      
         var toolbar = new HtmlEditorToolbar();
         toolbar.Items.Add(new ToolbarUndoButton());
         toolbar.Items.Add(new ToolbarRedoButton());
@@ -35,15 +36,23 @@
         toolbar.Items.Add(new ToolbarFontColorButton());
         toolbar.Items.Add(new ToolbarInsertLinkDialogButton(true));
         toolbar.Items.Add(new ToolbarInsertImageDialogButton(true));
+        toolbar.Items.Add(new ToolbarInsertVideoDialogButton());
         var tableOperationsButton = new ToolbarTableOperationsDropDownButton(true);
         tableOperationsButton.CreateDefaultItems();
         toolbar.Items.Add(tableOperationsButton);
-
         toolbar.Items.Add(new ToolbarInsertPlaceholderDialogButton(true));
         settings.Toolbars.Add(toolbar);
         settings.SettingsDialogs.InsertImageDialog.SettingsImageUpload.UploadCallbackRouteValues = new { Controller = "DevexHelper", Action = "ImageUpload" };
-        settings.SettingsDialogs.InsertImageDialog.SettingsImageUpload.UploadFolder =  HtmlEditorFeaturesDemosHelper.GetImageEditorFilePath();
+        settings.SettingsDialogs.InsertImageDialog.SettingsImageUpload.UploadFolder = HtmlEditorFeaturesDemosHelper.GetImageEditorFilePath();
         settings.SettingsDialogs.InsertImageDialog.SettingsImageUpload.ValidationSettings.Assign(HtmlEditorFeaturesDemosHelper.ImageUploadValidationSettings);
         settings.ClientSideEvents.CommandExecuted = "onCommandExecutedByHtmlEditor";
+        settings.Init = (source, e) =>
+        {
+            MVCxHtmlEditor he = (MVCxHtmlEditor)source;
+            he.HtmlCorrecting += (s1, e1) =>
+            {
+                e1.Handled = true;
+            };
+        };
 
     }).Bind(Model.HtmlContent).GetHtml()
