--- a/WMS/Views/Theme/Default/Account/Edit.cshtml
+++ b/WMS/Views/Theme/Default/Account/Edit.cshtml
@@ -156,38 +156,12 @@
                     </div>
                 </div>
                 <div class="input-group h-100 justify-content-center align-items-center">
-                    @Html.LabelFor(model => model.TaxID, htmlAttributes: new { @class = "col-md-4" })
-                    <div class="col-md-8">
-                        @Html.DropDownList("TaxID", null, String.Empty, new { @class = "chosen-select" })
-                        @Html.ValidationMessageFor(model => model.TaxID)
-                    </div>
-                </div>
-                <div class="input-group h-100 justify-content-center align-items-center">
                     @Html.LabelFor(model => model.AcceptedShelfLife, htmlAttributes: new { @class = "col-md-4" })
                     <div class="col-md-8">
                         @Html.EditorFor(model => model.AcceptedShelfLife)
                         @Html.ValidationMessageFor(model => model.AcceptedShelfLife)
                     </div>
                 </div>
-                <div class="input-group h-100 justify-content-center align-items-center">
-                    <label class="col-md-4">Select Market</label>
-                    <div class="col-md-8">
-                        @Html.ListBox("CustomersMarketIds", ViewBag.MarketDetailId as MultiSelectList, new { Multiple = "multiple", @class = "chosen-select", data_placeholder = "Choose Markets" })
-
-                    </div>
-                </div>
-
-                <div>
-                    <div class="input-group h-100 justify-content-center align-items-center">
-                        <div class="col-md-offset-2 col-md-10 bottom-right">
-                            <input type="submit" value="Save" class="btn btn-primary" />
-                            <div class="btn btn-default"> @Html.ActionLink("Back to List", "Index")</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 pull-left">
-
                 <div class="input-group h-100 justify-content-center align-items-center">
                     @Html.LabelFor(m => m.CreditLimit, htmlAttributes: new { @class = "col-md-4" })
                     <div class="col-md-8">
@@ -220,6 +194,35 @@
                         }
                         ).GetHtml()
                         @Html.ValidationMessageFor(model => model.CreditTerms)
+                    </div>
+                </div>
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.LabelFor(model => model.AccountLoyaltyCode, htmlAttributes: new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.AccountLoyaltyCode)
+                        @Html.ValidationMessageFor(model => model.AccountLoyaltyCode)
+                    </div>
+                </div>
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.LabelFor(model => model.AccountLoyaltyPoints, htmlAttributes: new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.AccountLoyaltyPoints)
+                        @Html.ValidationMessageFor(model => model.AccountLoyaltyPoints)
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 pull-left">
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    <label class="col-md-4">Select Market</label>
+                    <div class="col-md-8">
+                        @Html.ListBox("CustomersMarketIds", ViewBag.MarketDetailId as MultiSelectList, new { Multiple = "multiple", @class = "chosen-select", data_placeholder = "Choose Markets" })
+                    </div>
+                </div>
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    @Html.LabelFor(model => model.TaxID, htmlAttributes: new { @class = "col-md-4" })
+                    <div class="col-md-8">
+                        @Html.DropDownList("TaxID", null, String.Empty, new { @class = "chosen-select" })
+                        @Html.ValidationMessageFor(model => model.TaxID)
                     </div>
                 </div>
                 <div class="input-group h-100 justify-content-center align-items-center">
@@ -304,6 +307,14 @@
                                 <input type="button" onclick="javascript:ModalAccountContact.Show()" id="AccountAddress" class="btn btn-primary" value="+">
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="input-group h-100 justify-content-center align-items-center">
+                    <div class="col-md-offset-2 col-md-10 bottom-right">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                        <div class="btn btn-default"> @Html.ActionLink("Back to List", "Index")</div>
                     </div>
                 </div>
             </div>
