--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -615,9 +615,10 @@ input[type=number]::-webkit-outer-spin-button {
                                                     transition: all .3s ease
                                                 }
 
-                                                    .nb_header .nb_mainnav > ul li.hav_mega_nav .mega_nav_wrap .mega_nav_wrap_inner .meganav_firstcatList > li:hover > a {
-                                                        font-family: "primaryfont_Bold"
-                                                    }
+                                                .nb_header .nb_mainnav > ul li.hav_mega_nav .mega_nav_wrap .mega_nav_wrap_inner .meganav_firstcatList > li:hover > a {
+                                                    font-family: "primaryfont_Bold";
+                                                    padding-left: 5px;
+                                                }
 
                                                 .nb_header .nb_mainnav > ul li.hav_mega_nav .mega_nav_wrap .mega_nav_wrap_inner .meganav_firstcatList > li ul.subList:before {
                                                     content: "";
