--- a/WarehouseEcommerce/Content/Theme/University/app/css/app_responsive.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app_responsive.css
@@ -1,4 +1,4 @@
-@media(max-width: 1199px) {
+@media(min-width: 1199px) {
     .nb_top_catSection .accordion ul li div {
         transform: skew(12deg) translateX(-15%);
         width: 135%;
@@ -30,6 +30,9 @@
         .nb_top_catSection .accordion ul li:last-child div a {
             transform: skew(0deg);
         }
+}
+
+@media(max-width: 1199px) {
 
     .res_navWrapper.show {
         transform: translateX(0)
