--- a/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
@@ -63,13 +63,13 @@
             </div>
         </div>
         <div class="row">
-            @Html.Partial("_DynamicFilters", Model.ProductFilters)
+            @Html.Partial("_DynamicFilters", Model.DynamicFilters)
             <div class="col-md-8 col-lg-9 list-on-tablets">
                 <div class="nb_prd_listing_wrap">
                     <div class="row list-product-row">
                         @if (Model.Products == null || Model.Products?.Count() <= 0)
                         {
-                            foreach (var item in Model.ProductFilters.WebsiteNavigationCategories)
+                            foreach (var item in Model.DynamicFilters.WebsiteNavigationCategories)
                             {
                                 <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4 list-product-col">
                                     <div class="prd_lst_boxouter">
